fixed maven config